--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,19 @@ url: "http://www.hacksocnotts.github.io" # the base hostname & protocol for your
 theme:
   # Meta
   title: HackSoc
-  avatar:
+  avatar: 'avatar.png'
   gravatar: # Email MD5 hash
   description: "University of Nottingham Hack Society, HackSoc" # used by search engines
 
   # Header and footer text
-  # <p>Help us create this website by <a target=\"_blank\" href="https://github.com/HackSocNotts/HackSocNotts.github.io">submitting a change!</a></p>
   header_text: >
      <p>Hacking and Programming society at the University of Nottingham</p>
+     <p class="mobile-hidden">Calling all HackSoc <a href="//github.com/HackSocNotts" target=\"_blank\">github members</a>,
+     help us improve this website by <a target=\"_blank\" href="//github.com/HackSocNotts/HackSocNotts.github.io">submitting a change!</a></p>
 
   header_text_feature_image:
   footer_text: >
-   Created by members of <a href="https://github.com/orgs/HackSocNotts/people">HackSoc</a>
+   Created by members of <a href="//github.com/orgs/HackSocNotts/people">HackSoc</a>
 
   # Icons
   rss: false
