--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ theme:
      <p>Hacking and Programming society at the University of Nottingham</p>
      <p class="mobile-hidden">Calling all HackSoc <a href="//github.com/HackSocNotts" target=\"_blank\">github members</a>,
      help us improve this website by <a target=\"_blank\" href="//github.com/HackSocNotts/HackSocNotts.github.io">submitting a change!</a></p>
+     
+     <p> See our hackathon at <a href="hacknotts.com">hacknotts</a></p>
 
   header_text_feature_image:
   footer_text: >
