Added Slack social icon and link to the top menu
Make it easy for people to access the site through our main link,
opposed to having to remember it.

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ theme:
   facebook: "groups/hacksocNotts"
   github: "HackSocNotts"
   twitter: "hacksocnotts"
+  slack: "hacksocnotts"
 
   # Scripts
   google_analytics: # Tracking ID, e.g. "UA-000000-01"
