Use Github Flavoured Markdown
GFM is a lot nicer than the default Markdown syntax, so let's use that
instead.

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,8 @@ paginate_path: "page:num"
 
 # BUILD SETTINGS
 markdown: kramdown
+kramdown:
+  input: GFM
 highlighter: pygments
 sass:
   sass_dir: _sass
