Updated to Jekyll 3.0
Added missing dependancies.
Updated redundant post data from initial post.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@
 baseurl: "/" # the subpath of your site, e.g. /blog/
 url: "http://www.hacksocnotts.github.io" # the base hostname & protocol for your site
 
+gems:
+  - jekyll-paginate
+
+
 # THEME-SPECIFIC CONFIGURATION
 theme:
   # Meta
@@ -15,7 +19,7 @@ theme:
      <p>Hacking and Programming society at the University of Nottingham</p>
      <p class="mobile-hidden">Calling all HackSoc <a href="//github.com/HackSocNotts" target=\"_blank\">github members</a>,
      help us improve this website by <a target=\"_blank\" href="//github.com/HackSocNotts/HackSocNotts.github.io">submitting a change!</a></p>
-     
+
      <p> See our hackathon at <a href="http://hacknotts.com">hacknotts.com</a></p>
 
   header_text_feature_image:
