Add link to the WiT site

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ theme_specific:
      <p class="mobile-hidden">Calling all HackSoc <a href="//github.com/HackSocNotts" target=\"_blank\">github members</a>,
      help us improve this website by <a target=\"_blank\" href="//github.com/HackSocNotts/HackSocNotts.github.io">submitting a change!</a></p>
 
-     <p> See our hackathon at <a href="http://hacknotts.com">hacknotts.com</a></p>
+     <p>We also run the <a href="http://hacknotts.com">HackNotts hackathon</a> and the <a href="http://inspirewit.com">InspireWIT conference</a>.</p>
 
   header_text_feature_image:
   footer_text: >
