Updated exec details

--- a/_data/exec.yml
+++ b/_data/exec.yml
@@ -1,32 +1,32 @@
 - role_name: "President"
-  name: "Richard Davies"
-  email: "psyrwd"
-  slack_name: "rwdrich"
-- role_name: "Treasurer"
-  name: "Jonathan Dilks"
-  email: "psyjd3"
-  slack_name: "dilks"
-- role_name: "General Secretary"
-  name: "Bety Mehide"
-  email: "leybm3"
-  slack_name: "betymehide"
-- role_name: "General Secretary"
-  name: "Benjamin Charlton "
-  email: "psybc3"
-  slack_name: "kuldr"
+  name: "Pedro Mendonca"
+  email: "psyps4"
+  slack_name: "pedsm"
 - role_name: "Hack Secretary"
-  name: "Gregor Engelmann"
-  email: "psxge"
-  slack_name: "greg0re"
+  name: "Jonny Balls"
+  email: "psycjba"
+  slack_name: "jonnyballs"
+- role_name: "Treasurer"
+  name: "Tal Rozenman"
+  email: "psytr2"
+  slack_name: "rozenman"
+- role_name: "General Secretary"
+  name: "Siokhan Kouassi"
+  email: "psyslk"
+  slack_name: "siokhan"
+- role_name: "Social Media Secretary"
+  name: "Iida Korhonen"
+  email: "psyimk"
+  slack_name: "iida.k"
 - role_name: "Graphics and Publications Secretary"
-  name: "Houman Brinjcargorabi"
-  email: "psyhb2"
-  slack_name: "houms"
+  name: "Alex hagbarth"
+  email: "ezyah3"
+  slack_name: "ahagbarth"
 - role_name: "Outreach and Inclusivity Secretary"
-  name: "Amy Dickens"
-  email: "psxad2"
-  slack_name: "amyd"
+  name: "Rosanna Nichols"
+  email: "rosanna.nichols"
+  slack_name: "rosanna20736"
 - role_name: "Infrastructure Secretary"
-  name: "Casper Oakley"
-  email: "psyco"
-  slack_name: "casperoakley"
+  name: "Junsong yang"
+  email: "psyjy3"
+  slack_name: "mryang"
