--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # SITE CONFIGURATION
 baseurl: "/" # the subpath of your site, e.g. /blog/
-url: "http://www.hacksocnotts.github.io" # the base hostname & protocol for your site
+url: "hacksocnotts.co.uk" # the base hostname & protocol for your site
 
 gems:
   - jekyll-paginate
