--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-router-dom": "^4.3.1",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.78.2"
   },
