--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "^0.78.2"
   },
