--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-object-rest-spread",
     ["lodash", {"id": ["lodash", "semantic-ui-react"]}]
   ],
   "env": {
