--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "semantic-ui-less": "^2.2.12",
-    "semantic-ui-react": "^0.78.2"
+    "semantic-ui-react": "0.82.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
