Update theme config
Use semantic UI Themes

--- a/src/styling/theme.config
+++ b/src/styling/theme.config
@@ -64,7 +64,7 @@
 *******************************/
 
 /* Path to theme packages */
-@themesFolder : 'themes';
+@themesFolder : '~semantic-ui-less/themes';
 
 /* Path to site override folder */
 @siteFolder  : '../../src/styling/theme';
