Add dynamic import support

--- a/.babelrc
+++ b/.babelrc
@@ -16,6 +16,7 @@
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-syntax-dynamic-import",
     ["lodash", {"id": ["lodash", "semantic-ui-react"]}]
   ],
   "env": {
