Add Markdown Support

--- a/package.json
+++ b/package.json
@@ -49,9 +49,11 @@
     "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
     "gh-pages": "^1.2.0",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "markdown-loader": "^3.0.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.0",
     "react-dev-utils": "^5.0.0",
