--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-mocha": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "moment": "^2.22.2",
     "react": "^16.2.0",
+    "react-big-calendar": "^0.19.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.7",
@@ -45,7 +47,7 @@
     "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "chalk": "^2.3.1",
     "cross-env": "^5.1.3",
-    "css-loader": "^0.28.10",
+    "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
