--- a/package.json
+++ b/package.json
@@ -52,13 +52,12 @@
     "file-loader": "^1.1.9",
     "fs-extra": "^5.0.0",
     "gh-pages": "^1.2.0",
-    "html-loader": "^0.5.5",
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
-    "markdown-loader": "^3.0.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.0",
+    "raw-loader": "^0.5.1",
     "react-dev-utils": "^5.0.0",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.0",
