--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-mocha": "^5.1.0",
     "eslint-plugin-react": "^7.10.0",
+    "markdown-to-jsx": "^6.7.0",
     "moment": "^2.22.2",
     "react": "^16.2.0",
     "react-big-calendar": "^0.19.2",
