--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -1,6 +1,7 @@
 {
   "events": [
     {
+      "id": "example-event",
       "name": "Example Event",
       "start": "2019-06-01 18:00:00",
       "end": "2019-06-01 19:30:00",
@@ -9,14 +10,16 @@
       "description": "exampleEvent/description.md"
     },
     {
-      "name": "Example Event 2",
-      "start": "2018-09-02 18:00:00",
-      "end": "2018-09-02 19:30:00",
-      "location": "The Hub",
+      "id": "hacknotts-2018",
+      "name": "HackNotts 2018",
+      "start": "2018-11-24 10:00:00",
+      "end": "2018-11-25 17:00:00",
+      "location": "School of Computer Science",
       "summary": "exampleEvent/summary.md",
       "description": "exampleEvent/description.md"
     },
     {
+      "id": "try-it-event",
       "name": "Try-it event",
       "start": "2017-07-02 18:00:00",
       "end": "2017-07-02 19:30:00",
