--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -6,6 +6,7 @@
       "start": "2019-06-01 18:00:00",
       "end": "2019-06-01 19:30:00",
       "location": "The Hub",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
       "summary": "exampleEvent/summary.md",
       "description": "exampleEvent/description.md"
     },
@@ -15,6 +16,7 @@
       "start": "2018-11-24 10:00:00",
       "end": "2018-11-25 17:00:00",
       "location": "School of Computer Science",
+      "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
       "summary": "exampleEvent/summary.md",
       "description": "exampleEvent/description.md"
     },
@@ -24,6 +26,7 @@
       "start": "2017-07-02 18:00:00",
       "end": "2017-07-02 19:30:00",
       "location": "The Hub",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
       "summary": "exampleEvent/summary.md",
       "description": "exampleEvent/description.md"
     }
