--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -1,14 +1,48 @@
 {
   "events": [
     {
-      "id": "example-event",
-      "name": "Example Event",
-      "start": "2019-06-01 18:00:00",
-      "end": "2019-06-01 19:30:00",
+      "id": "try-it-event",
+      "name": "Try-it Event",
+      "start": "2018-09-26 18:30:00",
+      "end": "2018-09-26 20:00:00",
       "location": "The Hub",
       "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
-      "summary": "exampleEvent/summary.md",
-      "description": "exampleEvent/description.md"
+      "summary": "try-it-event/summary.md",
+      "description": "try-it-event/description.md",
+      "banner": "try-it-event/banner.jpg"
+    },
+    {
+      "id": "intro-to-python-1",
+      "name": "Intro to Python (1)",
+      "start": "2018-10-02 18:30:00",
+      "end": "2018-10-02 20:00:00",
+      "location": "A32 - Ada Lovelace Lab",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
+      "summary": "intro-to-python/summary.md",
+      "description": "intro-to-python/description.md",
+      "banner": "intro-to-python/banner.jpg"
+    },
+    {
+      "id": "speaker-event-1",
+      "name": "Speaker Event",
+      "start": "2018-10-04 18:30:00",
+      "end": "2018-10-04 20:00:00",
+      "location": "The Hub",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
+      "summary": "speaker-event-1/summary.md",
+      "description": "speaker-event-1/description.md",
+      "banner": "speaker-event-1/banner.jpg"
+    }, 
+    {
+      "id": "tech-nottingham-september-2018",
+      "name": "HackSoc Storms Tech Nottingham",
+      "start": "2018-10-08 18:30:00",
+      "end": "2018-10-08 21:00:00",
+      "location": "Antenna",
+      "mapLink": "http://maps.google.com/?q=Beck%20Street%20Nottingham,%20England,%20NG1%201EQ%20United%20Kingdom",
+      "summary": "tech-nottingham-september-2018/summary.md",
+      "description": "tech-nottingham-september-2018/description.md",
+      "banner": "tech-nottingham-september-2018/banner.png"
     },
     {
       "id": "hacknotts-2018",
@@ -17,18 +51,9 @@
       "end": "2018-11-25 17:00:00",
       "location": "School of Computer Science",
       "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
-      "summary": "exampleEvent/summary.md",
-      "description": "exampleEvent/description.md"
-    },
-    {
-      "id": "try-it-event",
-      "name": "Try-it event",
-      "start": "2017-07-02 18:00:00",
-      "end": "2017-07-02 19:30:00",
-      "location": "The Hub",
-      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
-      "summary": "exampleEvent/summary.md",
-      "description": "exampleEvent/description.md"
+      "summary": "hacknotts-2018/summary.md",
+      "description": "hacknotts-2018/description.md",
+      "banner": "hacknotts-2018/banner.jpg"
     }
   ]
 }
