--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-export-default-from",
     "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-export-namespace-from",
     ["lodash", {"id": ["lodash", "semantic-ui-react"]}]
   ],
   "env": {
