--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "redux-wait-for-state": "^2.0.0",
     "semantic-ui-less": "^2.2.12",
     "semantic-ui-react": "0.82.1"
   },
