--- a/_data/exec.yml
+++ b/_data/exec.yml
@@ -1,32 +1,32 @@
 - role_name: "President"
-  name: "Pedro Mendonca"
-  email: "psyps4"
+  name: "Aaron Osher"
+  email: "aaron@hacksocnotts.co.uk"
   slack_name: "pedsm"
 - role_name: "Hack Secretary"
-  name: "Jonny Balls"
-  email: "psycjba"
-  slack_name: "jonnyballs"
+  name: "Toby Jones"
+  email: "toby@hacksocnotts.co.uk"
+  slack_name: "monotron"
 - role_name: "Treasurer"
-  name: "Tal Rozenman"
-  email: "psytr2"
-  slack_name: "rozenman"
+  name: "Helena Maria Wong"
+#   email: ""
+#   slack_name: ""
 - role_name: "General Secretary"
-  name: "Siokhan Kouassi"
-  email: "psyslk"
-  slack_name: "siokhan"
-- role_name: "Social Media Secretary"
-  name: "Iida Korhonen"
-  email: "psyimk"
-  slack_name: "iida.k"
-- role_name: "Graphics and Publications Secretary"
-  name: "Alex hagbarth"
-  email: "ezyah3"
-  slack_name: "ahagbarth"
+  name: "Primoz Fabiani"
+  email: "primoz@hacksocnotts.co.uk"
+#   slack_name: ""
+# - role_name: "Social Media Secretary"
+#   name: "Iida Korhonen"
+#   email: "psyimk"
+#   slack_name: "iida.k"
+# - role_name: "Graphics and Publications Secretary"
+#   name: "Alex hagbarth"
+#   email: "ezyah3"
+#   slack_name: "ahagbarth"
 - role_name: "Outreach and Inclusivity Secretary"
-  name: "Rosanna Nichols"
-  email: "rosanna.nichols"
-  slack_name: "rosanna20736"
-- role_name: "Infrastructure Secretary"
-  name: "Junsong yang"
-  email: "psyjy3"
-  slack_name: "mryang"
+  name: "Ammar Khazal"
+  email: "ammar@hacksocnotts.co.uk"
+#   slack_name: ""
+# - role_name: "Infrastructure Secretary"
+#   name: "Junsong yang"
+#   email: "psyjy3"
+#   slack_name: "mryang"
