--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "html-webpack-plugin": "2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "node-fetch": "^2.2.0",
     "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-loader": "^2.1.0",
     "raw-loader": "^0.5.1",
