--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "fs-extra": "^5.0.0",
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "2.30.1",
+    "junit-report-builder": "^1.3.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "node-fetch": "^2.2.0",
