--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
           command: |
             mkdir -p ~/reports
             node_modules/.bin/eslint ./src/ --ext .js,.jsx --format junit --output-file ~/reports/eslint/results.xml
+            node scripts/validateEventsManifest.js src/_events/eventsManifest.json ~/reports/eventsManifest/results.xml
           when: always
       - store_test_results:
           path: ~/reports
