Update eventsManifest Fixed syntax error in being-part-of-the-community-and-how-to-talk-really-really-good

--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -112,7 +112,7 @@
     },
     {
       "id": "being-part-of-the-community-and-how-to-talk-really-really-good",
-      "name": "Being part of the community and how to talk really, really good."
+      "name": "Being part of the community and how to talk really, really good.",
       "start": "2018-10-25 18:30:00",
       "end": "2018-10-25 20:00:00",
       "location": "The Hub, School of Computer Science",
