--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,13 +48,15 @@ jobs:
 
       # Build
       - run: yarn build
-      - run: git config --global user.email $GH_EMAIL
-      - run: git config --global user.name $GH_NAME
+      # - run: git config --global user.email $GH_EMAIL
+      # - run: git config --global user.name $GH_NAME
       # Deploy
       - deploy:
           name: Deploy to GH_Pages if tests pass and branch is Master
           command:  |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              git config --global user.email $GH_EMAIL
+              git config --global user.name $GH_NAME
               node_modules/.bin/gh-pages -d build
             else
               echo "Not master branch so not deploying"
