--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -97,7 +97,7 @@
       "mapLink": "http://maps.google.com/?q=Beck%20Street%20Nottingham,%20England,%20NG1%201EQ%20United%20Kingdom",
       "summary": "tech-nottingham-jurassic-park-what-went-wrong/summary.md",
       "description": "tech-nottingham-jurassic-park-what-went-wrong/description.md",
-      "banner": "tech-nottingham-jurassic-park-what-went-wrong/banner.png"
+      "banner": "tech-nottingham-jurassic-park-what-went-wrong/banner.jpg"
     },
     {
       "id": "hacknotts-2018",
