Add MLH Local Hack Day 2018

--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -197,6 +197,17 @@
       "summary": "tech-nottingham-november-2018/summary.md",
       "description": "tech-nottingham-november-2018/description.md",
       "banner": "tech-nottingham-november-2018/banner.png"
+    },
+    {
+      "id": "mlh-localhackday-2018",
+      "name": "MLH Local Hack Day",
+      "start": "2018-12-01 09:00:00",
+      "end": "2018-12-01 21:00:00",
+      "location": "School of Computer Science",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
+      "summary": "mlh-localhackday-2018/summary.md",
+      "description": "mlh-localhackday-2018/description.md",
+      "banner": "mlh-localhackday-2018/banner.jpg"
     }
   ]
 }
