--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -207,7 +207,7 @@
       "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
       "summary": "mlh-localhackday-2018/summary.md",
       "description": "mlh-localhackday-2018/description.md",
-      "banner": "mlh-localhackday-2018/banner.jpg
+      "banner": "mlh-localhackday-2018/banner.jpg"
     },
     {
       "id": "talking-to-alexa",
