--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -241,6 +241,17 @@
       "summary": "mlh-localhost-build-and-deploy-your-first-website-jan-2019/summary.md",
       "description": "mlh-localhost-build-and-deploy-your-first-website-jan-2019/description.md",
       "banner": "mlh-localhost-build-and-deploy-your-first-website-jan-2019/banner.jpg"
+    },
+    {
+      "id": "mlh-localhost-blockchain-basics-feb-2019",
+      "name": "MLH Localhost: Blockchain Basics: An Introduction to Quorum®, Created by J.P. Morgan",
+      "start": "2019-02-05 18:30:00",
+      "end": "2019-02-05 20:00:00",
+      "location":"A32 - Ada Lovelace Lab",
+      "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
+      "summary": "mlh-localhost-blockchain-basics-feb-2019/summary.md",
+      "description": "mlh-localhost-blockchain-basics-feb-2019/description.md",
+      "banner": "mlh-localhost-blockchain-basics-feb-2019/banner.jpg"
     }
   ]
 }
