--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -254,6 +254,17 @@
       "banner": "mlh-localhost-blockchain-basics-feb-2019/banner.jpg"
     },
     {
+      "id": "technottingham-feb-2019",
+      "name": "HackSoc Storms Tech Nottingham February 2019",
+      "start": "2019-02-11 18:30:00",
+      "end": "2019-02-11 21:00:00",
+      "location":"Antenna",
+      "mapLink": "http://maps.google.com/?q=Beck%20Street%20Nottingham,%20England,%20NG1%201EQ%20United%20Kingdom",
+      "summary": "technottingham-feb-2019/summary.md",
+      "description": "technottingham-feb-2019/description.md",
+      "banner": "technottingham-feb-2019/banner.jpg"
+    },
+    {
       "id": "mlh-localhost-learn-c-sharp-with-unity-feb-2019",
       "name": "MLH Localhost: Learn C# With Unity",
       "start": "2019-02-26 18:30:00",
