--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -296,6 +296,28 @@
       "summary": "mlh-localhost-learn-c-sharp-with-unity-feb-2019/summary.md",
       "description": "mlh-localhost-learn-c-sharp-with-unity-feb-2019/description.md",
       "banner": "mlh-localhost-learn-c-sharp-with-unity-feb-2019/banner.jpg"
+    },
+    {
+      "id": "tech-nottingham-march-2019",
+      "name": "HackSoc Storms Tech Nottingham",
+      "start": "2019-03-11 18:30:00",
+      "end": "2018-03-11 21:00:00",
+      "location": "Antenna",
+      "mapLink": "http://maps.google.com/?q=Beck%20Street%20Nottingham,%20England,%20NG1%201EQ%20United%20Kingdom",
+      "summary": "tech-nottingham-march-2019/summary.md",
+      "description": "tech-nottingham-march-2019/description.md",
+      "banner": "tech-nottingham-march-2019/banner.png"
+    },    
+    {
+      "id": "intro-to-placements",
+      "name": "Introduction into Placements & My Personal Experience",
+      "start": "2019-03-5 18:30:00",
+      "end": "2018-03-5 21:00:00",
+      "location": "The Hub",
+      "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
+      "summary": "intro-to-placements/summary.md",
+      "description": "intro-to-placements/description.md",
+      "banner": "intro-to-placements/banner.png"
     }
   ]
 }
