oopsie woopsie I made a fucky wucky

--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -317,7 +317,7 @@
       "mapLink": "https://www.google.co.uk/maps/place/52%C2%B057'12.6%22N+1%C2%B011'14.1%22W/@52.953488,-1.1877845,17.15z/data=!3m1!4b1!4m6!3m5!1s0x0:0x0!7e2!8m2!3d52.9534883!4d-1.1872358",
       "summary": "intro-to-placements/summary.md",
       "description": "intro-to-placements/description.md",
-      "banner": "intro-to-placements/banner.png"
+      "banner": "intro-to-placements/banner.jpg"
     },    
     {
       "id": "cyber-security-1",
@@ -328,7 +328,7 @@
       "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
       "summary": "cyber-security-1/summary.md",
       "description": "cyber-security-1/description.md",
-      "banner": "cyber-security-1/banner.png"
+      "banner": "cyber-security-1/banner.jpg"
     },    
     {
       "id": "cyber-security-2",
@@ -339,7 +339,7 @@
       "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
       "summary": "cyber-security-2/summary.md",
       "description": "cyber-security-2/description.md",
-      "banner": "cyber-security-2/banner.png"
+      "banner": "cyber-security-2/banner.jpg"
     }
   ]
 }
