--- a/src/_events/eventsManifest.json
+++ b/src/_events/eventsManifest.json
@@ -340,6 +340,39 @@
       "summary": "cyber-security-2/summary.md",
       "description": "cyber-security-2/description.md",
       "banner": "cyber-security-2/banner.jpg"
+    },
+    {
+      "id": "cpp-1",
+      "name": "C++ Workshop 1",
+      "start": "2019-04-02 18:30:00",
+      "end": "2019-04-02 20:00:00",
+      "location":"A32 Lab",
+      "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
+      "summary": "cpp-workshop/summary.md",
+      "description": "cpp-workshop/description.md",
+      "banner": "cpp-workshop/banner.jpg"
+    },
+    {
+      "id": "cpp-2",
+      "name": "C++ Workshop 2",
+      "start": "2019-04-09 18:30:00",
+      "end": "2019-04-09 20:00:00",
+      "location":"A32 Lab",
+      "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
+      "summary": "cpp-workshop/summary.md",
+      "description": "cpp-workshop/description.md",
+      "banner": "cpp-workshop/banner.jpg"
+    },
+    {
+      "id": "cpp-3",
+      "name": "C++ Workshop 3",
+      "start": "2019-04-11 18:30:00",
+      "end": "2019-04-11 20:00:00",
+      "location":"A32 Lab",
+      "mapLink": "https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736",
+      "summary": "cpp-workshop/summary.md",
+      "description": "cpp-workshop/description.md",
+      "banner": "cpp-workshop/banner.jpg"
     }
   ]
 }
