--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "fs-extra": "^5.0.0",
     "gh-pages": "^1.2.0",
     "html-webpack-plugin": "2.30.1",
+    "ignore-loader": "^0.1.2",
     "js-yaml": "^3.13.0",
     "junit-report-builder": "^1.3.1",
     "less": "2.7.2",
