--- a/src/_events/browser-security-mark-goodwin/manifest.yml
+++ b/src/_events/browser-security-mark-goodwin/manifest.yml
@@ -1,5 +1,5 @@
 - id: browser-security-mark-goodwin
-  name: Malware Analysis and Reverse Engineering
+  name: Building and Breaking with Mark Goodwin
   start: '2019-04-04 18:30:00'
   end: '2019-04-04 20:00:00'
   location: C60 Seminar Room
