--- a/app.json
+++ b/app.json
@@ -5,6 +5,9 @@
   "buildpacks": [
     {
       "url": "heroku/nodejs"
+    },
+    {
+      "url": "https://github.com/heroku/heroku-buildpack-static.git"
     }
   ],
   "env": {
