--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,7 @@
 {
   "presets": [
     ["@babel/preset-env", {
-      "modules": false,
-      "targets": {
-        "browsers": [
-          "last 2 versions",
-          "ie >= 11",
-          "safari >= 10"
-        ]
-      }
+      "modules": false
     }],
     "@babel/react"
   ],
