--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@
 version: 2.1
 
 executors:
-  build_executor:
+  build-executor:
     working_directory: ~/repo
     docker:
       - image: circleci/node:8.10.0
 
 jobs:
   build_and_report:
-    executor: build_executor
+    executor: build-executor
     steps:
       - add_ssh_keys:
           fingerprints:
@@ -54,7 +54,7 @@ jobs:
             - ./*
 
   gh_deploy:
-    executor: build_executor
+    executor: build-executor
     steps:
       - attach_workspace:
           at: ~/repo
@@ -66,7 +66,6 @@ jobs:
             node_modules/.bin/gh-pages -d build
 
 workflows:
-  version: 2
   build_and_deploy:
     jobs:
       - build_and_report
