We have a speaker event now

--- a/src/_events/2019-speaker-event-oct-17/manifest.yml
+++ b/src/_events/2019-speaker-event-oct-17/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2019-speaker-event-oct-17
-  name: To Be Confirmed
+  name: Writing software for Microsoft's ecosystem
   start: '2019-10-17 18:30:00'
   end: '2019-10-17 20:00:00'
   location: A32 - Ada Lovelace Lab
