Added capability for custom event colours in calendar

--- a/src/_events/2019-hardware-meetup-1/manifest.yml
+++ b/src/_events/2019-hardware-meetup-1/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-hardware-meetup-1/summary.md
   description: 2019-hardware-meetup-1/description.md
   banner: 2019-hardware-meetup-1/banner.jpg
+  bgColor: '#de4d89'
