--- a/src/_events/2019-hardware-workshop-intro/manifest.yml
+++ b/src/_events/2019-hardware-workshop-intro/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-hardware-workshop-intro/summary.md
   description: 2019-hardware-workshop-intro/description.md
   banner: 2019-hardware-workshop-intro/banner.jpg
+  bgColor: '#7363ff'
