--- a/src/_events/2019-intro-to-linux/manifest.yml
+++ b/src/_events/2019-intro-to-linux/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-intro-to-linux/summary.md
   description: 2019-intro-to-linux/description.md
   banner: 2019-intro-to-linux/banner.jpg
+  bgColor: '#d46423'
