--- a/src/_events/2019-iot-workshop/manifest.yml
+++ b/src/_events/2019-iot-workshop/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-iot-workshop/summary.md
   description: 2019-iot-workshop/description.md
   banner: 2019-iot-workshop/banner.jpg
+  bgColor: '#7363ff'
