--- a/src/_events/2019-localhackday-learn/manifest.yml
+++ b/src/_events/2019-localhackday-learn/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-localhackday-learn/summary.md
   description: 2019-localhackday-learn/description.md
   banner: 2019-localhackday-learn/banner.jpg
+  bgColor: '#772828'
