--- a/src/_events/2019-mlh-localhost-build-slack-apps/manifest.yml
+++ b/src/_events/2019-mlh-localhost-build-slack-apps/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-mlh-localhost-build-slack-apps/summary.md
   description: 2019-mlh-localhost-build-slack-apps/description.md
   banner: 2019-mlh-localhost-build-slack-apps/banner.jpg
+  bgColor: '#772828'
