--- a/src/_events/2019-mlh-localhost-csharp-unity/manifest.yml
+++ b/src/_events/2019-mlh-localhost-csharp-unity/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-mlh-localhost-csharp-unity/summary.md
   description: 2019-mlh-localhost-csharp-unity/description.md
   banner: 2019-mlh-localhost-csharp-unity/banner.jpg
+  bgColor: '#772828'
