--- a/src/_events/2019-python-crash-course/manifest.yml
+++ b/src/_events/2019-python-crash-course/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-python-crash-course/summary.md
   description: 2019-python-crash-course/description.md
   banner: 2019-python-crash-course/banner.jpg
+  bgColor: '#de4d89'
