--- a/src/_events/2019-speaker-event-oct-17/manifest.yml
+++ b/src/_events/2019-speaker-event-oct-17/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-speaker-event-oct-17/summary.md
   description: 2019-speaker-event-oct-17/description.md
   banner: 2019-speaker-event-oct-17/banner.jpg
+  bgColor: '#de4d89'
