--- a/src/_events/2019-try-it-event/manifest.yml
+++ b/src/_events/2019-try-it-event/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-try-it-event/summary.md
   description: 2019-try-it-event/description.md
   banner: 2019-try-it-event/banner.jpg
+  bgColor: '#de4d89'
