--- a/src/_events/being-part-of-the-community-and-how-to-talk-really-really-good/manifest.yml
+++ b/src/_events/being-part-of-the-community-and-how-to-talk-really-really-good/manifest.yml
@@ -7,3 +7,4 @@
   summary: being-part-of-the-community-and-how-to-talk-really-really-good/summary.md
   description: being-part-of-the-community-and-how-to-talk-really-really-good/description.md
   banner: being-part-of-the-community-and-how-to-talk-really-really-good/banner.jpg
+  bgColor: '#de4d89'
