--- a/src/_events/browser-security-mark-goodwin/manifest.yml
+++ b/src/_events/browser-security-mark-goodwin/manifest.yml
@@ -7,3 +7,4 @@
   summary: browser-security-mark-goodwin/summary.md
   description: browser-security-mark-goodwin/description.md
   banner: browser-security-mark-goodwin/banner.jpg
+  bgColor: '#de4d89'
