--- a/src/_events/cpp-workshop/manifest.yml
+++ b/src/_events/cpp-workshop/manifest.yml
@@ -25,3 +25,4 @@
   summary: cpp-workshop/summary.md
   description: cpp-workshop/description.md
   banner: cpp-workshop/banner.jpg
+  bgColor: '#7363ff'
