--- a/src/_events/cyber-security-1/manifest.yml
+++ b/src/_events/cyber-security-1/manifest.yml
@@ -7,3 +7,4 @@
   summary: cyber-security-1/summary.md
   description: cyber-security-1/description.md
   banner: cyber-security-1/banner.jpg
+  bgColor: '#7363ff'
