--- a/src/_events/cyber-security-2/manifest.yml
+++ b/src/_events/cyber-security-2/manifest.yml
@@ -7,3 +7,4 @@
   summary: cyber-security-2/summary.md
   description: cyber-security-2/description.md
   banner: cyber-security-2/banner.jpg
+  bgColor: '#7363ff'
