--- a/src/_events/deep-learning/manifest.yml
+++ b/src/_events/deep-learning/manifest.yml
@@ -7,3 +7,4 @@
   summary: deep-learning/summary.md
   description: deep-learning/description.md
   banner: deep-learning/banner.jpg
+  bgColor: '#7363ff'
