--- a/src/_events/intro-to-linux/manifest.yml
+++ b/src/_events/intro-to-linux/manifest.yml
@@ -7,3 +7,4 @@
   summary: intro-to-linux/summary.md
   description: intro-to-linux/description.md
   banner: intro-to-linux/banner.jpg
+  bgColor: '#d46423'
