--- a/src/_events/mlh-localhackday-2018/manifest.yml
+++ b/src/_events/mlh-localhackday-2018/manifest.yml
@@ -7,3 +7,4 @@
   summary: mlh-localhackday-2018/summary.md
   description: mlh-localhackday-2018/description.md
   banner: mlh-localhackday-2018/banner.jpg
+  bgColor: '#772828'
