--- a/src/_events/mlh-localhost-learn-c-sharp-with-unity-feb-2019/manifest.yml
+++ b/src/_events/mlh-localhost-learn-c-sharp-with-unity-feb-2019/manifest.yml
@@ -7,3 +7,4 @@
   summary: mlh-localhost-learn-c-sharp-with-unity-feb-2019/summary.md
   description: mlh-localhost-learn-c-sharp-with-unity-feb-2019/description.md
   banner: mlh-localhost-learn-c-sharp-with-unity-feb-2019/banner.jpg
+  bgColor: '#772828'
