--- a/src/_events/october-egm/manifest.yml
+++ b/src/_events/october-egm/manifest.yml
@@ -7,3 +7,4 @@
   summary: october-egm/summary.md
   description: october-egm/description.md
   banner: october-egm/banner.jpg
+  bgColor: '#de4d89'
