--- a/src/_events/slideshow-karaoke-june-11-2019/manifest.yml
+++ b/src/_events/slideshow-karaoke-june-11-2019/manifest.yml
@@ -7,4 +7,5 @@
   summary: slideshow-karaoke-june-11-2019/summary.md
   description: slideshow-karaoke-june-11-2019/description.md
   banner: slideshow-karaoke-june-11-2019/banner.jpg
+  bgColor: '#de4d89'
   
