--- a/src/_events/talking-to-alexa/manifest.yml
+++ b/src/_events/talking-to-alexa/manifest.yml
@@ -7,3 +7,4 @@
   summary: talking-to-alexa/summary.md
   description: talking-to-alexa/description.md
   banner: talking-to-alexa/banner.jpg
+  bgColor: '#de4d89'
