--- a/src/_events/tech-nottingham-jurassic-park-what-went-wrong/manifest.yml
+++ b/src/_events/tech-nottingham-jurassic-park-what-went-wrong/manifest.yml
@@ -7,3 +7,4 @@
   summary: tech-nottingham-jurassic-park-what-went-wrong/summary.md
   description: tech-nottingham-jurassic-park-what-went-wrong/description.md
   banner: tech-nottingham-jurassic-park-what-went-wrong/banner.jpg
+  bgColor: '#de4d89'
