--- a/src/_events/tech-nottingham-november-2018/manifest.yml
+++ b/src/_events/tech-nottingham-november-2018/manifest.yml
@@ -7,3 +7,4 @@
   summary: tech-nottingham-november-2018/summary.md
   description: tech-nottingham-november-2018/description.md
   banner: tech-nottingham-november-2018/banner.png
+  bgColor: '#de4d89'
