--- a/src/_events/try-it-event/manifest.yml
+++ b/src/_events/try-it-event/manifest.yml
@@ -7,3 +7,4 @@
   summary: try-it-event/summary.md
   description: try-it-event/description.md
   banner: try-it-event/banner.jpg
+  bgColor: '#de4d89'
