--- a/src/_events/2019-cyber-security-xss/manifest.yml
+++ b/src/_events/2019-cyber-security-xss/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-cyber-security-xss/summary.md
   description: 2019-cyber-security-xss/description.md
   banner: 2019-cyber-security-xss/banner.jpg
+  bgColor: '#de4d89'
