--- a/src/_events/cyber-security-3/manifest.yml
+++ b/src/_events/cyber-security-3/manifest.yml
@@ -7,3 +7,4 @@
   summary: cyber-security-3/summary.md
   description: cyber-security-3/description.md
   banner: cyber-security-3/banner.jpg
+  bgColor: '#7363ff'
