--- a/src/_events/margins-2019/manifest.yml
+++ b/src/_events/margins-2019/manifest.yml
@@ -7,4 +7,4 @@
   summary: margins-2019/summary.md
   description: margins-2019/description.md
   banner: margins-2019/banner.jpg
-  
+  bgColor: '#de4d89'
