--- a/src/_events/mlh-localhost-build-and-deploy-your-first-website-jan-2019/manifest.yml
+++ b/src/_events/mlh-localhost-build-and-deploy-your-first-website-jan-2019/manifest.yml
@@ -7,3 +7,4 @@
   summary: mlh-localhost-build-and-deploy-your-first-website-jan-2019/summary.md
   description: mlh-localhost-build-and-deploy-your-first-website-jan-2019/description.md
   banner: mlh-localhost-build-and-deploy-your-first-website-jan-2019/banner.jpg
+  bgColor: '#772828'
