--- a/src/_events/tech-nottingham-june-2019/manifest.yml
+++ b/src/_events/tech-nottingham-june-2019/manifest.yml
@@ -7,3 +7,4 @@
   summary: tech-nottingham-june-2019/summary.md
   description: tech-nottingham-june-2019/description.md
   banner: tech-nottingham-june-2019/banner.png
+  bgColor: '#de4d89'
