--- a/src/_events/technottingham-feb-2019/manifest.yml
+++ b/src/_events/technottingham-feb-2019/manifest.yml
@@ -7,3 +7,4 @@
   summary: technottingham-feb-2019/summary.md
   description: technottingham-feb-2019/description.md
   banner: technottingham-feb-2019/banner.jpg
+  bgColor: '#de4d89'
