--- a/src/_events/2019-api-express/manifest.yml
+++ b/src/_events/2019-api-express/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2019-api-express
-  name: Python Crash Course
+  name: RESTful APIs with express.js
   start: '2019-11-05 18:30:00'
   end: '2019-11-05 20:00:00'
   location: A32 - Ada Lovelace Lab
