--- a/src/_events/2019-programming-cafe-nov-07/manifest.yml
+++ b/src/_events/2019-programming-cafe-nov-07/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2019-programming-cafe-nov-07
-  name: Hardware Meetup
+  name: Programming Café
   start: '2019-11-07 18:30:00'
   end: '2019-11-07 20:00:00'
   location: A32 - Ada Lovelace Lab
