--- a/src/_events/2019-cyber-security-sql/manifest.yml
+++ b/src/_events/2019-cyber-security-sql/manifest.yml
@@ -2,8 +2,8 @@
   name: Cyber Security - SQL Injection & Avoiding Database Vulnerabilities
   start: '2019-11-26 18:30:00'
   end: '2019-11-26 20:00:00'
-  location: LT3 - Exchange Building
-  mapLink: https://www.google.com/maps/place/Exchange+Building,+Jubilee+Campus,+Wollaton+Rd,+Nottingham+NG8+1BB/@52.9539184,-1.1901197,17z/data=!3m1!4b1!4m5!3m4!1s0x4879c202a9ac965d:0xec186c891949c701!8m2!3d52.9539184!4d-1.187931
+  location: TBC
+  mapLink: ''
   summary: 2019-cyber-security-sql/summary.md
   description: 2019-cyber-security-sql/description.md
   banner: 2019-cyber-security-sql/banner.jpg
