--- a/src/_events/2019-product-design/manifest.yml
+++ b/src/_events/2019-product-design/manifest.yml
@@ -2,8 +2,8 @@
   name: Product Design in Industry - by Vikram Chhapwale
   start: '2019-12-05 18:30:00'
   end: '2019-12-05 20:30:00'
-  location: A32 - Ada Lovelace Lab
-  mapLink: https://www.google.co.uk/maps/place/School+of+Computer+Science/@52.9533603,-1.1892748,17.15z/data=!4m5!3m4!1s0x4879c209bfffffff:0xaf426646771a25ac!8m2!3d52.953357!4d-1.18736
+  location: C3 - Exchange Building
+  mapLink: https://www.google.com/maps/place/Exchange+Building,+Jubilee+Campus,+Wollaton+Rd,+Nottingham+NG8+1BB/@52.9539184,-1.1901197,17z/data=!3m1!4b1!4m5!3m4!1s0x4879c202a9ac965d:0xec186c891949c701!8m2!3d52.9539184!4d-1.187931
   summary: 2019-product-design/summary.md
   description: 2019-product-design/description.md
   banner: 2019-product-design/banner.jpg
