--- a/src/_events/2019-advent-of-code/manifest.yml
+++ b/src/_events/2019-advent-of-code/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2019-advent-of-code
-  name: IoT Workshop
+  name: Advent of Code
   start: '2019-12-01 00:00:00'
   end: '2019-12-25 23:59:59'
   location: Online!
