Add all day event support

--- a/src/_events/2019-advent-of-code/manifest.yml
+++ b/src/_events/2019-advent-of-code/manifest.yml
@@ -7,3 +7,4 @@
   summary: 2019-advent-of-code/summary.md
   description: 2019-advent-of-code/description.md
   banner: 2019-advent-of-code/banner.jpg
+  allDay: true
