--- a/src/_events/2020-sustainability-week/manifest.yml
+++ b/src/_events/2020-sustainability-week/manifest.yml
@@ -1,5 +1,5 @@
 - id: 2020-sustainability-week
-  name: Accessible Design
+  name: Accessibility in Tech
   start: '2020-03-03 19:00:00'
   end: '2020-03-03 21:00:00'
   location: A32 - Ada Lovelace Lab
