--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 on: [push]
 jobs:
   build:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
   strategy:
     matrix:
       node-version: [12.x]
