--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       - master
 jobs:
   build:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
   strategy:
     matrix:
       node-version: [12.x]
